--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-md-spinner": "^0.2.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "superagent": "^3.8.3",
